assets/css/gsa/blocks/_icon-photos.scss
// icon-photos.scss

.icon-photos {
	position: relative;
	z-index: 1;
	margin-top: 30px;
	
	@media (min-width: 40em) {
		margin-top: -30px;
		
	}
}

.icon-photo {
	background-color: color(blue-warm-70v);
	margin-bottom: 0px;	
	display: flex;
	flex-direction: column;
	position: relative;	
	padding: 20px 20px 0px 20px;
	
	&:last-of-type {
		padding-bottom: 20px;
	}
	
	.icon-photo__callout {
		background-color: #FFF;
		width: 100%;
		padding: 20px;
		position: relative;
		z-index: 1;
	}
	
	.icon-photo__icon {
		img {
			max-width: 60px;
		}
	}
	
	h2.icon-photo__heading {
		color: color($theme-color-primary-dark);
	}
	
	.icon-photo__bg {
		position: relative;
		background-size: cover;
		background-repeat: no-repeat;
		width: 100%;
		display: block;
		min-height: 50vw;
	}
	/*.icon-photo__bgwrap {
		position: relative;
	
		//background-size: cover;
		//background-repeat: no-repeat;
		width: 100%;
		display: block;
		min-height: 50vw;
		overflow: hidden;
	}
	
	.icon-photo__bg {
		width: 100%;
		height: 100%;
		object-fit: cover;
	}*/
	
	.icon-photo__contentwrap {
		position: relative;
		display: flex;
		flex-direction: row;
		
		p {
			margin-top: 0;
			color: color($theme-color-primary-dark);
			line-height: 1.5em;
			
			a {
				color: color($theme-color-primary-dark);
				
				&:hover {
					color: color(ink);
				}
			}
		}
		
	}
	
	.icon-photo__arrow {
		width: 100%;
		max-width: 50px;
		//background-image: url("assets/img/icon-arrow.svg");
		background-repeat: no-repeat;
		background-position: left top;
		background-size: 40px auto;
	}
	
	.icon-photo__content {
		width: 100%;
	}	
	
	@media (min-width: 40em) {
		
		flex-direction: row;
		padding: 40px;
		margin-bottom: 40px;
		
		&:last-of-type {
			padding-bottom: 40px;
		}
		
		.icon-photo__callout {
			
			max-width: 60%;
			padding: 40px;
			position: relative;
			z-index: 1;
		}
		
		//.icon-photo__bgwrap {
		.icon-photo__bg {
			position: absolute;
			z-index: 0;
			top: 0;
			left: 45%;
			right: 0;
			bottom: 0;
			min-height: 0;
			width: auto;
		}
		
		
		.icon-photo__arrow {			
			max-width: 120px;
			background-size: 80px auto;

		}
		
		
		&.right-content {
			justify-content:  flex-end;

			//.icon-photo__bgwrap {
			.icon-photo__bg {
				left: 0;
				right: 45%;
			}
		}
		
	}
	
}

